package Composite;

public abstract class FileSystemNode {
    public String name;
    public abstract void display();
}
